[package]
name = "kubernetes-mock"
authors = ["Abel Shields <abshield@cisco.com>"]
description = "Mocking framework for interacting with the Kubernetes API"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
documentation = "https://docs.rs/kubernetes-mock"
repository = "https://github.com/cisco-open/kubernetes-mock-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.83.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.18.0", features = ["schemars"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.97"
futures = "0.3.28"
thiserror = "1.0.43"
hyper = "0.14.27"
tower-test = "0.4.0"

